# agent-exploration

./: LICENSE  README.md
Agent_Prototype/: README.md  cleaner.py  requirements.txt  setup.py
CLIs/explainclip/: README.md  pyproject.toml
CLIs/explainclip/src/explainclip/: __init__.py  cli.py  design.py
CLIs/explainclip/src/explainclip/themes/: __init__.py  base.py  loader.py
CLIs/explainclip/tests/: test_cli.py  test_design.py  test_render_scene.py  test_themes.py
LearningNotes/: 2026-02-12_architecture_guide.md  2026-02-12_exec_approval_implementation_plan.md  2026-02-12_session_architecture.md  2026-02-12_skills_understanding.md  2026-02-12_system_prompt_structure.md  2026-02-12_token_efficiency_evaluation.md  2026-02-12_video_analysis_understanding.md  2026-02-13_agent_collaboration_insights.md  2026-02-13_investigation_agent_structure_workflow.md  2026-02-13_tools_memory_soul_relationship.md  2026-02-16_agent_files_best_practices.md  2026-02-16_story_arc_agent_setup.md  2026-02-17_workflow_enforcement_analysis.md  2026-02-18_exec_security_two_layer_flow.md  2026-02-19_error_11_eagain_analysis.md  2026-02-20_fixing_gateway_lock_issues.md  2026-02-22_Shared_knowledge_strategy.md  2026-02-22_automation_workflows_research.md  2026-02-23_Proactive_KG_Architecture.md  2026-02-23_antigravity_plugin_deprecation.md  2026-02-24_Proactive_Learning_v2.md  2026-02-24_requireMention_deep_dive.md  2026-02-27_acp_integration_analysis.md  2026-02-27_acp_thread_bound_agents.md  2026-02-27_workflow_setup_guide.md  2026-03-02_discord_agent_commands_and_exec_approvals.md  2026-03-03_acp_deep_dive_and_debugging.md  2026-03-10_db_memory_architecture.md  2026-03-10_db_memory_implementation_plan.md  Readme.md  (+8 more)
(+43 files in other folders)
